Adding a form for a mock weekly newsletter

--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
             <p class="text-center planet">Venus</p>
         </div>
     </div>
+    <section class="text-center">
+        <a href="form/form.html">Sign up for our weekly newsletter!</a>
+
+    </section>
 </div>
     
    
