--- a/form/form.html
+++ b/form/form.html
@@ -4,28 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="form.css">
     <title>Sign up</title>
 </head>
 <body>
-    <form action="#" method="post">
-        <p>
-            <label for="username">Username</label>
-            <input id="username" name="username" type="text" class="form-control">
-            <span>Can only contain letters a-z in lowercase</span>
-        </p>
-        <p>
-            <label for="password">Password</label>
-            <input id="password" name="password" type="password">
-            <span>Must contain a lowercase, uppercase letter and a number</span>
-        </p>
-        <p>
-        <p>
-            <label for="email">Email</label>
-            <input id="email" name="email" type="text">
-            <span>Must be a valid email address</span>
-        </p>
-    </form>
+    <div class="form-container">
+        <div id="form-info">
+        <h1>What you'll have access to:</h1>
+        <ul>
+            <li class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo corporis et eligendi dolor, sit consectetur tempora assumenda quae saepe porro.</li>
+            <li class="p-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt at aliquid voluptatibus officia voluptatum cum optio ab necessitatibus qui alias!</li>
+            <li class="p-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, iure maxime laborum porro blanditiis corporis reprehenderit amet distinctio doloremque consequatur?</li>
+            <li class="p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente mollitia aperiam quibusdam velit iusto beatae ipsum rerum veniam quidem possimus.</li>
+        </ul>
+        <button class="btn btn-success mb-3">Sign me up!</button>
+    </div>
+ </div>
     
 
 
